fix old safari gap css property

--- a/src/pages/home/styles/card.css
+++ b/src/pages/home/styles/card.css
@@ -42,6 +42,7 @@
     list-style: none;
     margin: 2em;
     display: grid;
+    grid-gap: 20px;
     gap: 20px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
